--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,9 @@
-<h1>hey!</h1>
+<div id="welcome-logo" class="center">
+	<h1 class="logo">PennyPost</h1>
+	<h3 class="subtitle">Send physical Postcards from your phone or computer.</h3>
+	<img src="/assets/photos/penny_image_home.jpg">
+</div>
+<div id="login-buttons" class="center">
+	<a href="#!/new-postcard"><button class="login-btn">Login With Instagram</button></a>
+	<h4 class="">Get started without an Instagram</h4>
+</div>
