photo selector page in progress

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,2 +1,6 @@
-<h1>hey!!</h1>	
-<h2>{{hello}}</h2>
+<div id="card-constructor">
+
+</div>
+<div id="photo-selector">
+		<img ng-repeat="image in images track by $index" src={{image.url}}>
+</div>
