added cookies and logout

--- a/views/home.html
+++ b/views/home.html
@@ -4,6 +4,6 @@
 	<img src="/assets/photos/penny_image_home.jpg">
 </div>
 <div id="login-buttons" class="center">
-	<a href="/authorize-user"><button class="login-btn">Login With Instagram</button></a>
+	<a href="/instagram/authorize-user"><button class="login-btn">Login With Instagram</button></a>
 	<h4 class="">Get started without an Instagram</h4>
 </div>
