--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,9 +1,9 @@
 <div id="card-constructor" ng-click="flippin()">
-
 </div>
+<a href="/instagram/logout">Logout</a>
 
 <div id="photo-selector" ng-hide="photoSet">
-		<img ng-repeat="image in images track by $index" src={{image.url}}>
+		<img ng-repeat="image in images track by $index" src={{image.images.standard_resolution.url}}>
 </div>
 <div id="message-form" ng-show="photoSet">
 <textarea>yo yo yo yo</textarea>
