photos adding to directive

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,4 +1,4 @@
-<postcard></postcard>
+<postcard images="selectedImages"></postcard>
 <a href="/instagram/logout">Logout</a>
 
 <div id="photo-selector" ng-hide="photoSet">
