added postcard customization

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,4 +1,7 @@
-<postcard images="selectedImages"></postcard>
+
+<!-- directive -->
+<postcard class="center card-constructor" images="selectedImages">
+</postcard>
 <a href="/instagram/logout">Logout</a>
 
 <div id="photo-selector" ng-hide="photoSet">
