directive functional. styling in progress

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,6 +1,6 @@
 
 <!-- directive -->
-<postcard class="center card-constructor" images="selectedImages">
+<postcard class="center card-constructor" images="selectedImages" style="style">
 </postcard>
 <a href="/instagram/logout">Logout</a>
 
