--- a/views/new-card.html
+++ b/views/new-card.html
@@ -8,5 +8,5 @@
 		<img ng-repeat="image in images track by $index" ng-click="addImage(image.images.standard_resolution.url)" src={{image.images.standard_resolution.url}}>
 </div>
 <div id="message-form" ng-show="photoSet">
-<textarea>yo yo yo yo</textarea>
+<textarea>Hide Them Pics - Click Here</textarea>
 </div>
