implementing scroll style change

--- a/views/partials/postcard.html
+++ b/views/partials/postcard.html
@@ -7,8 +7,10 @@
   overflow: hidden;
 }
 {{style}}
+{{displayMode}}
 </style>
 <div id="card-constructor">
+<!-- <h1>{{displayMode}}</h1> -->
 <img ng-repeat="image in images" src={{image}}>
 </div>
 
