--- a/views/partials/postcard.html
+++ b/views/partials/postcard.html
@@ -7,10 +7,10 @@
   overflow: hidden;
 }
 {{style}}
-{{displayMode}}
+
 </style>
 <div id="card-constructor">
-<!-- <h1>{{displayMode}}</h1> -->
+<!-- <h1 ng-att>{{displayMode}}</h1> -->
 <img ng-repeat="image in images" src={{image}}>
 </div>
 
