--- a/css/newcard.css
+++ b/css/newcard.css
@@ -1,7 +1,11 @@
 
-#photo-selector{
+#photo-selector {
 	margin:3vh 0vw 0vw 0vw;
 }
-#photo-selector img{
-	width:32vw;
+#photo-selector img {
+	width:19.8vw;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: .3vw solid #fff;
 }
