--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,12 +1,18 @@
+<div class="container">
+  <div class="row center">
+    <!-- directive for postcard -->
+    <postcard class="center card-constructor" images="selectedImages" style="style">
+    </postcard>
+  </div>
 
-<!-- directive -->
-<postcard class="center card-constructor" images="selectedImages" style="style">
-</postcard>
-<a href="/instagram/logout">Logout</a>
+  <a href="/instagram/logout">Logout</a>
+  <button class="btn btn-warning pull-right" ng-click="clearPostcard()">Clear Postcard</button>
 
-<div id="photo-selector" ng-hide="photoSet">
-		<img ng-repeat="image in images track by $index" ng-click="addImage(image.images.standard_resolution.url)" src={{image.images.standard_resolution.url}}>
-</div>
-<div id="message-form" ng-show="photoSet">
-<textarea>Hide Them Pics - Click Here</textarea>
+  <!-- photos from Instagram -->
+  <div id="photo-selector" ng-hide="photoSet">
+      <img ng-repeat="image in images track by $index" ng-click="addImage(image.images.standard_resolution.url)" src={{image.images.standard_resolution.url}}>
+  </div>
+  <div id="message-form" ng-show="photoSet">
+  <textarea>Hide Them Pics - Click Here</textarea>
+  </div>
 </div>
