added more styling

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -5,8 +5,8 @@
     </postcard>
   </div>
 
-  <button class="btn btn-warning pull-right" ng-click="clearPostcard()">Clear Postcard</button>
-  <a href="/instagram/logout"><button class="btn btn-success pull-left">Logout Insta</button></a>
+  <button class="btn btn-warning pull-left" ng-click="clearPostcard()">Clear Postcard</button>
+  <a href="/instagram/logout"><button class="btn btn-success pull-right">Logout Insta</button></a>
 
   <!-- photos from Instagram -->
   <div id="photo-selector" ng-hide="photoSet">
