--- a/views/home.html
+++ b/views/home.html
@@ -6,8 +6,8 @@
     <img src="/assets/photos/penny_image_home.jpg">
   </div>
   <div id="login-buttons" class="center">
-    <a href="/instagram/authorize-user"><button class="login-btn">Login With Instagram</button></a>
-    <h4 class="">Get started without an Instagram</h4>
+    <a href="/instagram/authorize-user"><button class="btn login-btn">Login With Instagram</button></a>
+    <!-- <h4 class="">Get started without an Instagram</h4> -->
   </div>
 
 </div>
