--- a/views/partials/postcard.html
+++ b/views/partials/postcard.html
@@ -6,6 +6,7 @@
   background-color:rgb(#ffffff);
   overflow: hidden;
   box-shadow: 0px 0px 10px 0px #777;
+  border: 10px solid #fff;
 }
 {{style}}
 /*{{displayMode}}*/
