moved clear btn accessible

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -5,7 +5,7 @@
     </postcard>
   </div>
   <div class="row">
-    <button class="btn btn-warning pull-left" ng-click="clearPostcard()">Clear Postcard</button>
+    <button class="btn btn-warning pull-right" ng-click="clearPostcard()">Clear Postcard</button>
     <a href="/instagram/logout"><button class="btn btn-success pull-right">Logout Insta</button></a>
   </div>
 
