--- a/views/new-card.html
+++ b/views/new-card.html
@@ -15,4 +15,6 @@
   <div id="message-form" ng-show="photoSet">
   <textarea>Hide Them Pics - Click Here</textarea>
   </div>
+  <div class="scroll-spacer">
+  </div>
 </div>
