remove images functionality operational

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row center">
     <!-- directive for postcard -->
-    <postcard class="center card-constructor" images="selectedImages" style="style">
+    <postcard class="center card-constructor">
     </postcard>
   </div>
   <div class="row">
