lob api call in progress

--- a/views/new-card.html
+++ b/views/new-card.html
@@ -7,7 +7,7 @@
   <div class="row">
     <button class="btn btn-warning pull-left" ng-click="clearPostcard()">Clear Postcard</button>
     <a href="/instagram/logout"><button class="btn btn-success pull-right">Logout Insta</button></a>
-    <button class="btn btn-info pull-right" ng-click="">Send Postcard</button>
+    <button class="btn btn-info pull-right" ng-click="sendPostcard()">Send Postcard</button>
   </div>
 
   <!-- photos from Instagram -->
