--- a/views/new-card.html
+++ b/views/new-card.html
@@ -10,10 +10,14 @@
     <button class="btn btn-info pull-right" ng-click="sendPostcard()">Send Postcard</button>
   </div>
 
+  <!-- copy of postcard to show on selection of images -->
+  <postcard class="fadein center card-constructor" ng-show="photoSelected">
+  </postcard>
   <!-- photos from Instagram -->
   <div id="photo-selector" ng-hide="photoSet">
-      <img ng-repeat="image in images track by $index" ng-click="addImage(image.images.standard_resolution.url)" src={{image.images.standard_resolution.url}}>
+      <img ng-repeat="image in images track by $index" ng-click="addImage(image.images.standard_resolution.url,$event)" src={{image.images.standard_resolution.url}}>
   </div>
+
   <div id="message-form" ng-show="photoSet">
   <textarea>Hide Them Pics - Click Here</textarea>
   </div>
