front end of card process in progress

--- a/views/partials/postcard.html
+++ b/views/partials/postcard.html
@@ -13,7 +13,14 @@
 </style>
 <div id="card-constructor">
 <!-- <h1>{{displayMode}}</h1> -->
-<img draggable ng-repeat="image in selectedImages track by $index" src={{image}} id="img{{$index}}">
+<textarea ng-model="message" ng-show="photoSet" rows="18" cols="38" placeholder="Enter your message here!"></textarea>
+<tr>
+<div ng-show="photoSet" id="recipient-div">
+<h3>To:</h3>
+<hr>
+<button class="btn btn-success">Add Recipient</button>
+</div>
+<img draggable ng-hide="photoSet" ng-repeat="image in selectedImages track by $index" src={{image}} id="img{{$index}}" ng-mouseover="selecOptsToggleOn($index)" ng-mouseleave="selecOptsToggleOff()">
 </div>
 
 
