--- a/views/new-card.html
+++ b/views/new-card.html
@@ -3,6 +3,8 @@
     <!-- directive for postcard -->
     <postcard class="center card-constructor">
     </postcard>
+    <span class="glyphicon glyphicon-repeat" id="cardFlipIcon" ng-click="flippin()"></span>
+    <span class="glyphicon glyphicon-trash" id="cardFlipIcon" ng-show="deleteShow" ng-mouseup="removeImg()"></span>
   </div>
   <div class="row">
     <button class="btn btn-warning pull-left" ng-click="clearPostcard()">Clear Postcard</button>
@@ -16,13 +18,10 @@
   </postcard>
 
   <!-- photos from Instagram -->
-  <div id="photo-selector" ng-hide="photoSet">
+  <div id="photo-selector">
       <img ng-repeat="image in images track by $index" ng-click="addImage(image.images.standard_resolution.url,$event)" src={{image.images.standard_resolution.url}}>
   </div>
 
-  <div id="message-form" ng-show="photoSet">
-  <textarea>Hide Them Pics - Click Here</textarea>
-  </div>
-  <div class="scroll-spacer">
+ <!--  <div class="scroll-spacer"> -->
   </div>
 </div>
